// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdaptivityElementQuestionSelection should render (every required combination) 1`] = `
<div>
  <div
    class="grid w-full gap-4 px-2 py-2"
  >
    <div
      class="flex items-center w-full gap-4 "
    >
      <div
        class=""
      >
        <button
          class="w-full col-span-2 md:col-span-1 px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
          title="questionToolTip"
        >
          <div
            class="grid items-center w-full h-full grid-cols-5 "
          >
            <div
              class="flex items-center h-full"
            >
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                src="diffculties-adaptivity-placeholder.svg"
              />
              <img
                alt=""
                class="w-4 h-4 md:w-6 md:h-6"
                src="diffculties-adaptivity-medium-required-solved.svg"
              />
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                src="diffculties-adaptivity-placeholder.svg"
              />
            </div>
            <p
              class="flex justify-center col-span-3 px-4 text-sm text-start"
            >
              normal
               
            </p>
            <div
              class="flex items-center justify-end pr-2"
            >
              <img
                alt=""
                class="h-5 md:h-7"
                src="check-solution.svg"
                title="legendTaskRequiredSolved"
              />
            </div>
          </div>
        </button>
      </div>
      <div
        class="flex flex-row h-full md:gap-4 "
      />
    </div>
    <div
      class="flex items-center w-full gap-4 "
    >
      <div
        class=""
      >
        <button
          class="w-full col-span-2 md:col-span-1 px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
          title="questionToolTip"
        >
          <div
            class="grid items-center w-full h-full grid-cols-5 "
          >
            <div
              class="flex items-center h-full"
            >
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                src="diffculties-adaptivity-placeholder.svg"
              />
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                src="diffculties-adaptivity-placeholder.svg"
              />
              <img
                alt=""
                class="w-4 h-4 md:w-6 md:h-6"
                src="diffculties-adaptivity-hard-required-tried.svg"
              />
            </div>
            <p
              class="flex justify-center col-span-3 px-4 text-sm text-start"
            >
              hard
               
            </p>
            <div
              class="flex items-center justify-end pr-2"
            >
              <img
                alt=""
                class="h-5 md:h-7"
                src="required.svg"
                title="legendTaskRequired"
              />
            </div>
          </div>
        </button>
      </div>
      <div
        class="flex flex-row h-full md:gap-4 "
      />
    </div>
  </div>
</div>
`;

exports[`AdaptivityElementQuestionSelection should render (with all difficulties) 1`] = `
<div>
  <div
    class="grid w-full gap-4 px-2 py-2"
  >
    <div
      class="flex items-center w-full gap-4 "
    >
      <div
        class=""
      >
        <button
          class="w-full col-span-2 md:col-span-1 px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
          title="questionToolTip"
        >
          <div
            class="grid items-center w-full h-full grid-cols-5 "
          >
            <div
              class="flex items-center h-full"
            >
              <img
                alt=""
                class="w-4 h-4 md:w-6 md:h-6"
                src="diffculties-adaptivity-easy-unsolved-icon.svg"
              />
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                src="diffculties-adaptivity-placeholder.svg"
              />
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                src="diffculties-adaptivity-placeholder.svg"
              />
            </div>
            <p
              class="flex justify-center col-span-3 px-4 text-sm text-start"
            >
              easy
               
            </p>
            <div
              class="flex items-center justify-end pr-2"
            >
              <div
                class="w-16"
              />
            </div>
          </div>
        </button>
      </div>
      <div
        class="flex flex-row h-full md:gap-4 "
      />
    </div>
    <div
      class="flex items-center w-full gap-4 "
    >
      <div
        class=""
      >
        <button
          class="w-full col-span-2 md:col-span-1 px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
          title="questionToolTip"
        >
          <div
            class="grid items-center w-full h-full grid-cols-5 "
          >
            <div
              class="flex items-center h-full"
            >
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                src="diffculties-adaptivity-placeholder.svg"
              />
              <img
                alt=""
                class="w-4 h-4 md:w-6 md:h-6"
                src="diffculties-adaptivity-medium-solved.svg"
              />
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                src="diffculties-adaptivity-placeholder.svg"
              />
            </div>
            <p
              class="flex justify-center col-span-3 px-4 text-sm text-start"
            >
              normal
               
            </p>
            <div
              class="flex items-center justify-end pr-2"
            >
              <div
                class="w-16"
              />
            </div>
          </div>
        </button>
      </div>
      <div
        class="flex flex-row h-full md:gap-4 "
      >
        <div
          class=""
        >
          <button
            class="w-full h-full px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
            title="hintToolTip"
          >
            <p
              class="text-sm"
            >
              hintButton
            </p>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex items-center w-full gap-4 "
    >
      <div
        class=""
      >
        <button
          class="w-full col-span-2 md:col-span-1 px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
          title="questionToolTip"
        >
          <div
            class="grid items-center w-full h-full grid-cols-5 "
          >
            <div
              class="flex items-center h-full"
            >
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                src="diffculties-adaptivity-placeholder.svg"
              />
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                src="diffculties-adaptivity-placeholder.svg"
              />
              <img
                alt=""
                class="w-4 h-4 md:w-6 md:h-6"
                src="diffculties-adaptivity-hard-tried.svg"
              />
            </div>
            <p
              class="flex justify-center col-span-3 px-4 text-sm text-start"
            >
              hard
               
            </p>
            <div
              class="flex items-center justify-end pr-2"
            >
              <div
                class="w-16"
              />
            </div>
          </div>
        </button>
      </div>
      <div
        class="flex flex-row h-full md:gap-4 "
      >
        <div
          class=""
        >
          <button
            class="w-full h-full px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
            title="hintToolTip"
          >
            <p
              class="text-sm"
            >
              hintButton
            </p>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
